Updated Tasks and Users models ID increment. Fixed issues in controller where we were adding directly to list instead of using Users add method.

--- a/Task-List-2/Views/Home/Registration.cshtml
+++ b/Task-List-2/Views/Home/Registration.cshtml
@@ -1,4 +1,5 @@
 ﻿<h2>Register</h2>
+<p>User ID: @ViewBag.Message</p>
 <form action="~/Home/Registration" method="post">
     Email<input type="email" name="Email" /><br />
     Password<input type="password" name="Password" /><br />
