AddTask view created and button added to TaskList

--- a/Task-List-2/Views/Home/Registration.cshtml
+++ b/Task-List-2/Views/Home/Registration.cshtml
@@ -1,4 +1,5 @@
-﻿<h2>Register</h2>
+﻿<h3 style="color:red">@ViewBag.Message</h3>
+<h2>Register</h2>
 <form action="~/Home/Registration" method="post"
     oninput='passwordConfirm.setCustomValidity(passwordConfirm.value != Password.value ? "Passwords do not match." : "")'>
     <div class="form-group">
