Updated index to use font awesome icons in nav bar. Also added completed toggle fuctionality

--- a/Task-List-2/Views/Home/About.cshtml
+++ b/Task-List-2/Views/Home/About.cshtml
@@ -1,7 +1,4 @@
-﻿@{
-    ViewBag.Title = "About";
-}
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+﻿<h1>About</h1>
 
-<p>Use this area to provide additional information.</p>
+<p>This webapp brought to you by Eric Holt. It is built using ASP.Net MVC. 
+    It uses version Bootstrap to provide the best in todays looks.</p>
