--- a/Task-List-2/Views/Home/Contact.cshtml
+++ b/Task-List-2/Views/Home/Contact.cshtml
@@ -1,14 +1,8 @@
-﻿@{
-    ViewBag.Title = "Contact";
-}
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
-
+﻿
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    My Address<br />
+    Grand Rapids, MI 49508<br />
+    Phone: 616-555-1234
 </address>
 
 <address>
