--- a/Task-List-2/Views/Home/Index.cshtml
+++ b/Task-List-2/Views/Home/Index.cshtml
@@ -3,29 +3,26 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Task Master</h1>
+    <p class="lead">Let Task Mask keep track of those tasks for you! That way you don't have to worry about
+    remembering those tasks and you can focus on the stuff that matters.</p>
+    <p><a href="@Url.Action("Registration", "Home")" class="btn btn-primary btn-lg">Signup &raquo;</a><a href="@Url.Action("Register", "Home")" class="ml-2">Already have an account?</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Add Task</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Need to remember to pay that phone bill? Perhaps you have a project due. 
+            Add as many tasks as you want!
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Delete Task</h2>
+        <p>You have a task that you keep putting off? Tired of seeing that task in your list? Just delete it!</p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Toggle Complete</h2>
+        <p>You finally have that task finished? Mark it complete!</p>
     </div>
 </div>
