--- a/Task-List-2/Views/Home/Login.cshtml
+++ b/Task-List-2/Views/Home/Login.cshtml
@@ -1,6 +1,24 @@
 ﻿<h2>Login</h2>
+@if (@Session["RegSuccess"] != null)
+{
+    <div class="alert alert-success alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        @Session["RegSuccess"]
+    </div>
+}
+@if (Session["Failure"] != null)
+{
+    <div class="alert alert-danger alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        @Session["LoginFailure"]
+    </div>
+}
+
 <form action="~/Home/Login" method="post">
-    Email<input type="email" name="Email" /><br />
-    Password<input type="password" name="Password" /><br />
+    <div class="form-group">
+        <label for="Email">Email</label><br />
+        <input type="email" name="Email" class="form-control" id="Email" placeholder="Enter Email Address" required />
+        <input type="password" name="Password" class="form-control" id="Password" placeholder="Enter Password" required /><br />
+    </div>
     <input type="submit" />
 </form>
