--- a/Task-List-2/Views/Shared/_Layout.cshtml
+++ b/Task-List-2/Views/Shared/_Layout.cshtml
@@ -3,14 +3,15 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>Task Master a ASP.NET MVC Application</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            @Html.ActionLink("Task Master", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -22,11 +23,24 @@
                     @if (Session["User"] != null)
                     {
                         <li>@Html.ActionLink("Task List", "TaskList", "Home", null, new { @class = "nav-link" })</li>
-                        <li>@Html.ActionLink("Logout", "Logout", "Home", null, new { @class = "nav-link" })</li>
+                    }
+                </ul>
+                <ul class="nav navbar-nav ml-auto">
+
+                    @if (Session["User"] != null)
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link" href="@Url.Action("Logout", "Home")"><span class="fas fa-sign-in-alt"></span> Logout</a>
+                        </li>
                     }
                     else
                     {
-                    <li>@Html.ActionLink("Login", "Login", "Home", null, new { @class = "nav-link" })</li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="@Url.Action("Registration", "Home")"><span class="fas fa-user"></span>Sign Up</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="@Url.Action("Login", "Home")"><span class="fas fa-sign-in-alt"></span> Login</a>
+                        </li>
                     }
                 </ul>
             </div>
@@ -36,7 +50,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Task Master a ASP.NET Application</p>
         </footer>
     </div>
 
