Fixed styling of website and all functionality requires are met

--- a/Task-List-2/Views/Home/Index.cshtml
+++ b/Task-List-2/Views/Home/Index.cshtml
@@ -6,14 +6,14 @@
     <h1>Task Master</h1>
     <p class="lead">Let Task Mask keep track of those tasks for you! That way you don't have to worry about
     remembering those tasks and you can focus on the stuff that matters.</p>
-    <p><a href="@Url.Action("Registration", "Home")" class="btn btn-primary btn-lg">Signup &raquo;</a><a href="@Url.Action("Register", "Home")" class="ml-2">Already have an account?</a></p>
+    <p><a href="@Url.Action("Registration", "Home")" class="btn btn-primary btn-lg">Signup &raquo;</a><a href="@Url.Action("Login", "Home")" class="ml-2">Already have an account?</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
         <h2>Add Task</h2>
         <p>
-            Need to remember to pay that phone bill? Perhaps you have a project due. 
+            Need to remember to pay that phone bill, a project due?
             Add as many tasks as you want!
         </p>
     </div>
