--- a/Task-List-2/Views/Home/Login.cshtml
+++ b/Task-List-2/Views/Home/Login.cshtml
@@ -17,8 +17,14 @@
 <form action="~/Home/Login" method="post">
     <div class="form-group">
         <label for="Email">Email</label><br />
-        <input type="email" name="Email" class="form-control" id="Email" placeholder="Enter Email Address" required />
+        <input type="email" name="Email" class="form-control mb-3" id="Email" placeholder="Enter Email Address" required />
+        <label for="Password">Password</label><br />
         <input type="password" name="Password" class="form-control" id="Password" placeholder="Enter Password" required /><br />
+        <input class="btn btn-primary" type="submit" value="Login"/>
     </div>
-    <input type="submit" />
 </form>
+
+<script>
+    document.getElementById("Email").focus();
+
+</script>   
