--- a/Task-List-2/Views/Home/TaskList.cshtml
+++ b/Task-List-2/Views/Home/TaskList.cshtml
@@ -32,7 +32,7 @@
     }
     else
     {
-        <table class="table table-striped text-center">
+        <table class="table table-striped table-bordered text-center">
             <thead>
                 <tr>
                     <th scope="col">Id</th>
